--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-web": "0.17.1",
     "yup": "^0.32.11"
   },
